[gd_scene load_steps=10 format=2]

[ext_resource path="res://Cell/cell_view.gd" type="Script" id=1]
[ext_resource path="res://Cell/cell.gd" type="Script" id=2]
[ext_resource path="res://Sprites/square.png" type="Texture" id=3]
[ext_resource path="res://Fonts/text_larger.tres" type="DynamicFont" id=6]
[ext_resource path="res://Utilities/Clickable/clickable.tscn" type="PackedScene" id=7]
[ext_resource path="res://Cell/cell_controller.gd" type="Script" id=8]
[ext_resource path="res://Fonts/pencil_marks.tres" type="DynamicFont" id=9]
[ext_resource path="res://Fonts/marks_dots.tres" type="DynamicFont" id=10]
[ext_resource path="res://Utilities/blur.tres" type="Material" id=11]

[node name="Cell" type="Node2D"]
script = ExtResource( 2 )

[node name="Controller" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Clickable" parent="Controller" instance=ExtResource( 7 )]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )

[node name="View" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Blur" type="Sprite" parent="View"]
material = ExtResource( 11 )
texture = ExtResource( 3 )
centered = false

[node name="Square" type="Sprite" parent="View"]
modulate = Color( 0.498039, 0.498039, 0.498039, 0.498039 )
texture = ExtResource( 3 )
centered = false

[node name="Colors" type="Node2D" parent="View"]
modulate = Color( 0.498039, 0.498039, 0.498039, 0.466667 )

[node name="ThinBorder" type="Line2D" parent="View"]
modulate = Color( 1, 1, 1, 0.541176 )
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64, 0, -0.5 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )

[node name="HighlightBorder" type="Line2D" parent="View"]
modulate = Color( 1, 1, 1, 0 )
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64, 0, -0.5 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="Selected" type="Line2D" parent="View"]
visible = false
z_index = 1
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64, 0, -1.5 )
width = 3.0
default_color = Color( 1, 1, 1, 1 )

[node name="ThickBorder" type="Line2D" parent="View"]
visible = false
z_index = 1
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64, 0, -1.5 )
width = 3.0
default_color = Color( 1, 1, 1, 1 )

[node name="Number" type="Label" parent="View"]
margin_right = 64.0
margin_bottom = 72.0
rect_min_size = Vector2( 64, 64 )
custom_fonts/font = ExtResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Marks" type="Control" parent="View"]
margin_right = 64.0
margin_bottom = 72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dots" type="Control" parent="View/Marks"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 1.0
margin_right = -4.0
margin_bottom = -9.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Label" parent="View/Marks/Dots"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
text = "●"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Label" parent="View/Marks/Dots"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
text = "●"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Label" parent="View/Marks/Dots"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
text = "●"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Label" parent="View/Marks/Dots"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
text = "●"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="Label" parent="View/Marks/Dots"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
text = "●"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="Label" parent="View/Marks/Dots"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
text = "●"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="7" type="Label" parent="View/Marks/Dots"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
text = "●"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="8" type="Label" parent="View/Marks/Dots"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
text = "●"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="9" type="Label" parent="View/Marks/Dots"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
text = "●"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fixed" type="Control" parent="View/Marks"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Label" parent="View/Marks/Fixed"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "1"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Label" parent="View/Marks/Fixed"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "2"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Label" parent="View/Marks/Fixed"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "3"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Label" parent="View/Marks/Fixed"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "4"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="Label" parent="View/Marks/Fixed"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="Label" parent="View/Marks/Fixed"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "6"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="7" type="Label" parent="View/Marks/Fixed"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="8" type="Label" parent="View/Marks/Fixed"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "8"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="9" type="Label" parent="View/Marks/Fixed"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "9"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="stage_cell_state_changed" from="." to="View" method="_on_Stage_cell_state_changed"]
[connection signal="dehovered" from="Controller" to="." method="_on_Controller_dehovered"]
[connection signal="hovered" from="Controller" to="." method="_on_Controller_hovered"]
[connection signal="mouse_entered" from="Controller/Clickable" to="Controller" method="_on_Clickable_mouse_entered"]
[connection signal="mouse_exited" from="Controller/Clickable" to="Controller" method="_on_Clickable_mouse_exited"]
